--- a/.gitignore
+++ b/.gitignore
@@ -475,3 +475,5 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+Autocomplete.DataStructures/generated_autocomplete_queries.txt
+Autocomplete.DataStructures/generated_searches.txt
