--- a/DictionaryMarshallBenchmark/DictionaryMarshallBenchmark.csproj
+++ b/DictionaryMarshallBenchmark/DictionaryMarshallBenchmark.csproj
@@ -3,15 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>Autocomplete.DataStructures</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="rm.Trie" Version="1.3.5" />
-    <PackageReference Include="TrieNet.Core" Version="1.0.4" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.5" />
   </ItemGroup>
 
 </Project>
